.k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streampets-backend
  namespace: streampets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streampets-backend
  template:
    metadata:
      labels:
        app: streampets-backend
        project: streampets
    spec:
      containers:
      - name: streampets-backend-container
        image: ljheal/streampets-backend
        ports:
        - containerPort: 8000
