.k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streampets-backend-service
  namespace: streampets
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: streampets
